--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "itsgoingd/clockwork": "^5.0",
+        "laravel/breeze": "^1.10",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
         "spatie/yaml-front-matter": "^2.0"
